# SDRPlusPlus_CommunityEdition

./: .cursorrules  CMakeLists.txt  GEMINI.md  MACOS_BUILD_INSTRUCTIONS.md  P25_TESTING_INSTRUCTIONS.md  SCANNER_ENHANCED_FEATURES.md  SCANNER_FFT_INTEGRATION_README.md  debug_output.txt  integrate_scanner_fft.sh  iq_frontend_interface.cpp  macos_version_patch.sh  make_macos_bundle.sh  make_macos_bundle_fixed.sh  recreate_macos_bundle.sh  rtaudio.patch  run_debug_squelch.sh  scanner_fft_integration.cpp  test_scanner_fft.sh  test_squelch_delta.sh
.cursor/rules/: persona.mdc
.github/workflows/: build_all.yml  build_all.yml.bak  build_all.yml.new  manual_release.yml
SDR++CE.app/Contents/Frameworks/: libsdrpp_core.dylib
SDR++CE.app/Contents/MacOS/: sdrpp_ce
SDR++CE.app/Contents/Plugins/: airspy_source.dylib  airspyhf_source.dylib  audio_source.dylib  discord_integration.dylib  file_source.dylib  hackrf_source.dylib  hermes_source.dylib  network_source.dylib  rfspace_source.dylib  rtl_sdr_source.dylib  rtl_tcp_source.dylib  scanner.dylib  sdrpp_server_source.dylib  spectran_http_source.dylib  spyserver_source.dylib
SDR++CE.app/Contents/_CodeSignature/: CodeResources
SDR++CE_CORRECT_AUDIO.app/Contents/Frameworks/: libportaudio.2.dylib  libsdrpp_core.dylib
SDR++CE_CORRECT_AUDIO.app/Contents/MacOS/: sdrpp_ce
SDR++CE_CORRECT_AUDIO.app/Contents/Plugins/: iq_exporter.dylib  m17_decoder.dylib  rfspace_source.dylib
SDR++CE_CORRECT_AUDIO.app/Contents/_CodeSignature/: CodeResources
SDR++CE_FINAL_FIXED.app/Contents/Frameworks/: libsdrpp_core.dylib
SDR++CE_FINAL_FIXED.app/Contents/MacOS/: sdrpp_ce
SDR++CE_FINAL_FIXED.app/Contents/Plugins/: discord_integration.dylib  m17_decoder.dylib
SDR++CE_FINAL_FIXED.app/Contents/_CodeSignature/: CodeResources
SDR++CE_FINAL_FIXED_AUDIO.app/Contents/MacOS/: sdrpp_ce
SDR++CE_FINAL_FIXED_AUDIO.app/Contents/Plugins/: discord_integration.dylib  frequency_manager.dylib  m17_decoder.dylib
SDR++CE_FINAL_FIXED_AUDIO.app/Contents/_CodeSignature/: CodeResources
SDR++CE_FIXED_AUDIO.app/Contents/Frameworks/: libcodec2.1.2.dylib  libsdrpp_core.dylib
SDR++CE_FIXED_AUDIO.app/Contents/MacOS/: sdrpp_ce
SDR++CE_FIXED_AUDIO.app/Contents/Plugins/: discord_integration.dylib  network_source.dylib  new_portaudio_sink.dylib
SDR++CE_FIXED_AUDIO.app/Contents/_CodeSignature/: CodeResources
SDR++CE_RNNoise.app/Contents/Frameworks/: libsdrpp_core.dylib
SDR++CE_RNNoise.app/Contents/MacOS/: sdrpp_ce
SDR++CE_RNNoise.app/Contents/Plugins/: radio.dylib
SDR++CE_RNNoise.app/Contents/_CodeSignature/: CodeResources
SDR++CE_RNNoise_Fixed.app/Contents/MacOS/: sdrpp_ce
SDR++CE_RNNoise_Fixed.app/Contents/Plugins/: discord_integration.dylib  network_sink.dylib  rnnoise_audio_sink.dylib
SDR++CE_RNNoise_Fixed.app/Contents/_CodeSignature/: CodeResources
SDR++CE_RNNoise_Fixed2.app/Contents/Frameworks/: libsdrpp_core.dylib
SDR++CE_RNNoise_Fixed2.app/Contents/MacOS/: sdrpp_ce
SDR++CE_RNNoise_Fixed2.app/Contents/Plugins/: discord_integration.dylib  rnnoise_audio_sink.dylib  scanner.dylib
SDR++CE_RNNoise_Fixed2.app/Contents/_CodeSignature/: CodeResources
SDR++CE_RNNoise_Fixed3.app/Contents/MacOS/: sdrpp_ce
SDR++CE_RNNoise_Fixed3.app/Contents/Plugins/: rnnoise_audio_sink.dylib  sdrpp_server_source.dylib
SDR++CE_RNNoise_Fixed3.app/Contents/_CodeSignature/: CodeResources
SDR++CE_Scanner.app/Contents/Frameworks/: libsdrpp_core.dylib
SDR++CE_Scanner.app/Contents/MacOS/: sdrpp_ce
SDR++CE_Scanner.app/Contents/Plugins/: audio_sink.dylib  audio_source.dylib  scanner.dylib
SDR++CE_Scanner.app/Contents/_CodeSignature/: CodeResources
SDR++CE_Scanner_Fixed.app/Contents/MacOS/: sdrpp_ce
SDR++CE_Scanner_Fixed.app/Contents/Plugins/: iq_exporter.dylib  scanner.dylib
SDR++CE_Scanner_Fixed.app/Contents/_CodeSignature/: CodeResources
SDR++CE_Scanner_Fixed2.app/Contents/: Info.plist
SDR++CE_Scanner_Fixed2.app/Contents/MacOS/: sdrpp_ce
SDR++_BugFixes.app/Contents/MacOS/: sdrpp_ce
SDR++_Improved_Squelch.app/Contents/: Info.plist
SDR++_fixed_logging.app/Contents/: Info.plist
core/: CMakeLists.txt
core/rnnoise/: CMakeLists.txt  rnnoise.h  rnnoise_data.h  rnnoise_stub.c
core/src/: module_com.cpp
decoder_modules/digital_demod_base/: CMakeLists.txt
decoder_modules/p25_digital_demod/: CMakeLists.txt
decoder_modules/p25_digital_demod/src/: main.cpp
docs/: DIGITAL_DEMODULATION_TESTING_MANUAL.md  DIGITAL_DEMODULATOR_IMPLEMENTATION_PLAN.md
docs/architecture/: 01_core_architecture.md  01_core_architecture_enhanced.md  02_module_system.md  05_advanced_module_patterns.md  06_debugging_troubleshooting.md
misc_modules/scanner/: CMakeLists.txt
misc_modules/scanner/src/: ScannerPSD.cpp  ScannerPSD.hpp  main.cpp  main.cpp.new  scanner_README.md
sink_modules/rnnoise_audio_sink/: CMakeLists.txt
sink_modules/rnnoise_audio_sink/src/: main.cpp
source_modules/plutosdr_source/: CMakeLists.txt
tools/: digital_stream_receiver.py
(+301 files in other folders)
